kubernetes/grafana/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway-ingress
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: pangolin-gateway
      namespace: istio-ingress
  hostnames:
    - grafana.alexmickelson.guru
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: grafana
          port: 80
          weight: 1
